# glfwTemplate

./: CMakeLists.txt
src/: main.cpp
src/boilerplate/: setup_opengl.cpp  setup_opengl.h
